# FemtoBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  ModelFile.example  README.md  cargarentorno.sh  check_wiz.py  config.yaml  config_ollama.yaml  docker-compose.yml  femtobot.pid  install.sh  pyproject.toml  requirements.txt  run.sh  test_prune.py  test_vector.py  verify_catbox.py
.github/workflows/: release.yaml
assets/: styles.tcss
data/: instructions.md  memory.md  memory.md.example
docs/: architecture.md
femtobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: check_models.py  check_models_verbose.py  control_luz.py  debug_thinking.py  manage_db.py
skills/busqueda_imagen/: SKILL.md
skills/busqueda_web/: SKILL.md
skills/cron/: SKILL.md
skills/luces_wiz/: SKILL.md
skills/matematicas/: SKILL.md
skills/memoria/: SKILL.md
skills/terminal/: SKILL.md
skills/testing_skill/: SKILL.md
src/: __init__.py  cli.py  client.py  constants.py  main.py  telegram_bot.py  tui.py
src/handlers/: audio.py  commands.py  document.py  photo.py  video.py  voice.py
src/jobs/: email_digest.py  events.py  inactivity.py
src/memory/: vector_store.py
src/scripts/: install_python.sh  install_searxng.sh  trigger_notification.py
src/services/: command_service.py  deep_research_service.py  media_service.py  rag_service.py  (+3 more)
utils/: __init__.py  audio_utils.py  config_loader.py  cron_utils.py  document_utils.py  email_utils.py  logger.py  search_utils.py  skill_loader.py  telegram_utils.py  web_fetcher.py  wiz_utils.py  youtube_utils.py
(+14 files in other folders)
