[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femtobot"
version = "1.0.0"
description = "Smart personal assistant for small local LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click",
    "python-telegram-bot[job-queue]",
    "httpx",
    "python-dotenv",
    "PyYAML",
    "faster-whisper",
    "chromadb",
    "telegramify-markdown",
    "pymupdf",
    "python-docx",
    "markdown",
    "psutil",
    "trafilatura",
]

[project.optional-dependencies]
lights = ["pywizlight"]
media = ["yt-dlp"]
research = ["odfpy"]
email = []  # uses stdlib imaplib, no extra deps
full = [
    "pywizlight",
    "yt-dlp",
    "odfpy",
]

[project.scripts]
femtobot = "src.cli:cli"

[tool.setuptools]
packages = ["src", "src.handlers", "src.jobs", "src.memory", "src.middleware",
            "src.services", "src.state", "src.tui_handlers", "src.tui_utils",
            "src.scripts", "utils", "data", "assets"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md", "*.txt", "*.tcss", "*.sh"]
data = ["*.md", "*.txt"]
assets = ["*.tcss"]
src = ["instructions.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
